--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@
               <div class="col-md-3" data-wow-offset="100">
                 <div id="vehicle-nav-container">
                   <ul class="vehicle-nav">
-                    <li class="active"><a href="#vehicle-1">VW Golf VII</a><span class="active">&nbsp;</span></li>
-                    <li><a href="#vehicle-2">Audi A1 S-LINE</a><span class="active">&nbsp;</span></li>
-                    <li><a href="#vehicle-3">Toyota Camry</a><span class="active">&nbsp;</span></li>
-                    <li><a href="#vehicle-4">BMW 320 ModernLine</a><span class="active">&nbsp;</span></li>
-                    <li><a href="#vehicle-5">Mercedes-Benz GLK</a><span class="active">&nbsp;</span></li>
-                    <li><a href="#vehicle-6">VW Passat CC</a><span class="active">&nbsp;</span></li>
+                    <li class="active"><a href="#vehicle-1">Porsche 1</a><span class="active">&nbsp;</span></li>
+                    <li><a href="#vehicle-2">Porsche 2</a><span class="active">&nbsp;</span></li>
+                    <li><a href="#vehicle-3">Porsche 3</a><span class="active">&nbsp;</span></li>
+                    <li><a href="#vehicle-4">Porsche 4</a><span class="active">&nbsp;</span></li>
+                    <li><a href="#vehicle-5">Porsche 5</a><span class="active">&nbsp;</span></li>
+                    <li><a href="#vehicle-6">Porsche 6</a><span class="active">&nbsp;</span></li>
                   </ul>
                 </div>
               </div>
@@ -159,7 +159,7 @@
               <div class="vehicle-data" id="vehicle-1">
                 <div class="col-md-6" data-wow-offset="100">
                   <div class="vehicle-img">
-                    <img class="img-responsive" src="img/vehicle1.jpg" alt="Vehicle">
+                    <img class="img-responsive" src="img/cars/vehicle1.jpg" alt="Vehicle">
                   </div>
                 </div>
                 <div class="col-md-3" data-wow-offset="200">
@@ -202,7 +202,7 @@
               <div class="vehicle-data" id="vehicle-2">
                 <div class="col-md-6" data-wow-offset="200">
                   <div class="vehicle-img">
-                    <img class="img-responsive" src="img/vehicle2.jpg" alt="Vehicle">
+                    <img class="img-responsive" src="img/cars/vehicle2.jpg" alt="Vehicle">
                   </div>
                 </div>
                 <div class="col-md-3" data-wow-offset="200">
@@ -245,7 +245,7 @@
               <div class="vehicle-data" id="vehicle-3">
                 <div class="col-md-6" data-wow-offset="200">
                   <div class="vehicle-img">
-                    <img class="img-responsive" src="img/vehicle3.jpg" alt="Vehicle">
+                    <img class="img-responsive" src="img/cars/vehicle3.jpg" alt="Vehicle">
                   </div>
                 </div>
                 <div class="col-md-3" data-wow-offset="200">
@@ -288,7 +288,7 @@
               <div class="vehicle-data" id="vehicle-4">
                 <div class="col-md-6" data-wow-offset="200">
                   <div class="vehicle-img">
-                    <img class="img-responsive" src="img/vehicle4.jpg" alt="Vehicle">
+                    <img class="img-responsive" src="img/cars/vehicle4.jpg" alt="Vehicle">
                   </div>
                 </div>
                 <div class="col-md-3" data-wow-offset="200">
@@ -331,7 +331,7 @@
               <div class="vehicle-data" id="vehicle-5">
                 <div class="col-md-6" data-wow-offset="200">
                   <div class="vehicle-img">
-                    <img class="img-responsive" src="img/vehicle5.jpg" alt="Vehicle">
+                    <img class="img-responsive" src="img/cars/vehicle5.jpg" alt="Vehicle">
                   </div>
                 </div>
                 <div class="col-md-3" data-wow-offset="200">
@@ -374,7 +374,7 @@
               <div class="vehicle-data" id="vehicle-6">
                 <div class="col-md-6" data-wow-offset="200">
                   <div class="vehicle-img">
-                    <img class="img-responsive" src="img/vehicle6.jpg" alt="Vehicle">
+                    <img class="img-responsive" src="img/cars/vehicle6.jpg" alt="Vehicle">
                   </div>
                 </div>
                 <div class="col-md-3" data-wow-offset="200">
