--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               </p>
             </div>
             <div style="position: absolute; top: 0; right: 0;" class="imholder col-md-6 col-xs-12 pull-right">
-              <img style="z-index:-1" id="imageRoger" data-original="img/cars/Roger.jpg" alt="Info Img" class="lazy img-responsive roger">
+              <img style="z-index:-1" id="imageRoger" src="img/cars/roger.jpg" alt="Info Img" class="img-responsive roger">
             </div>
           </div>
           <!-- Single photo end -->
@@ -345,9 +345,8 @@
         <script src="js/bootstrap-datepicker.js"></script>
         <script src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
         <script src="js/gmap3.min.js"></script>
-        <script src="js/jquery.bxslider.js"></script>
-
-        <script src="js/loaded.js"></script>
+        <script src="js/jquery.bxslider.js"></script>		
+		<script src="js/velocity.js"></script>
 
         <!--[if !(gte IE 8)]><!-->
             <script src="js/wow.min.js"></script>
