--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </section>
 
           <!-- Vehicles start -->
-          <section style="margin-top: 10px;" id="vehicles" class="container">
+          <section style="margin-top: 10px; height: 551px" id="vehicles" class="container">
             <div class="row">
               <div style="height: 80px;" class="veh col-md-12">
                 <h2 class="title" data-wow-offset="200">911</h2>
@@ -323,10 +323,7 @@
               <div class="row">
                 <div class="col-md-12 text-center">
                   <ul class="footer-nav">
-                    <li><a class="scroll-to" href="#top">Home</a></li>
-                    <li><a class="scroll-to" href="#information">Over</a></li>
-                    <li><a class="scroll-to" href="#vehicles">911</a></li>
-                    <li><a class="scroll-to" href="#contact">Contact</a></li>
+
                   </ul>
                   <div class="clearfix"></div>
                 </div>
