--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
 
     <!-- Teaser start -->
+	<div id="loaderholder"style="position: absolute; height: 60px;" class="col-xs-12"><div class="loader"></div></div>
     <img style="opacity: 0; margin-top: 95px;" id="teaserres" class="visible-xs visible-sm img-responsive" src="img/cars/banner.jpg" />
-
     <section class="hidden-xs hidden-sm" style="opacity: 0;" id="teaser"></section>
 
         <div class="hidden-xs hidden-sm arrow-down"></div>
@@ -344,6 +344,8 @@
         <script src="js/gmap3.min.js"></script>
         <script src="js/jquery.bxslider.js"></script>		
 		<script src="js/velocity.js"></script>
+		
+		<script src="js/loaded.js"></script>
 
         <!--[if !(gte IE 8)]><!-->
             <script src="js/wow.min.js"></script>
