--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 
     <!-- Teaser start -->
-	<div id="loaderholder"style="position: absolute; height: 60px;" class="col-xs-12"><div class="loader"></div></div>
+	  <div id="loaderholder"style="position: absolute; height: 60px;" class="visible-xs visible-sm col-xs-12"><div class="loader"></div></div>
     <img style="opacity: 0; margin-top: 95px;" id="teaserres" class="visible-xs visible-sm img-responsive" src="img/cars/banner.jpg" />
     <section class="hidden-xs hidden-sm" style="opacity: 0;" id="teaser"></section>
 
@@ -114,7 +114,7 @@
 
           <!-- Single photo start -->
           <div class="row" style="position: relative; visibility: visible; -webkit-animation: fadeInLeft;">
-            <div class="col-md-6 pull-left wow" data-wow-offset="200">
+            <div class="col-md-6 pull-left">
               <h2 class="title">Over Roger More</h2>
               <h3 class="subtitle">Porsche 911 Classic Import</h3>
               <p>Ongeveer 15 jaar geleden ben ik op slag verliefd geworden op de klassieke Porsche 911 toen ik de sportwagen een weekend mocht lenen van een goede vriend.
@@ -332,33 +332,9 @@
           <!-- Footer end -->
 
         <script src="js/jquery-1.11.0.min.js"></script>
-<<<<<<< HEAD
-        <script src="js/jquery.bxslider.js"></script>
 		    <script src="js/velocity.js"></script>
-=======
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.autocomplete.min.js"></script>
-        <script src="js/jquery.placeholder.js"></script>
-        <script src="js/locations-autocomplete.js"></script>
-        <script src="js/bootstrap-datepicker.js"></script>
-        <script src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
-        <script src="js/gmap3.min.js"></script>
-        <script src="js/jquery.bxslider.js"></script>		
-		<script src="js/velocity.js"></script>
-		
-		<script src="js/loaded.js"></script>
-
-        <!--[if !(gte IE 8)]><!-->
-            <script src="js/wow.min.js"></script>
-            <script>
-                // Initialize WOW
-                //-------------------------------------------------------------
-                new WOW({mobile: false}).init();
-            </script>
-        <!--<![endif]-->
-
->>>>>>> FETCH_HEAD
+        <script src="js/loaded.js"></script>
+        <script src="js/jquery.bxslider.js"></script>
         <script src="js/custom.js"></script>
 
       </body>
