--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Roger More</title>
+  <title>Roger More, Porsche 911 Classic Import</title>
+  <meta name="description" content="Porsche 911 Classic Import, Roger Zetz.">
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -134,7 +135,7 @@
             </div>
             <div class="col-xs-12">
               <p>
-                Met veel plezier sta ik op RSfest, een Porsche beurs in het Autotron op 6 & 7 september 2014. Ik nodig u allen van harte uit om mijn stand te bezoeken. Zie ook <a href="http://www.rsfest.nl">http://www.rsfest.nl.</a> Mocht u meer willen weten over de Porsche 911 dan raad ik het boek van de auteur Peter Morgan ‘Porsche 911 in detail’ aan. Daarin wordt de auto duidelijk per bouwjaar, in detail beschreven. Met productie -aanpassingen en –aantallen, chassis- en motornummers, lakkleuren, optielijsten en nog veel meer. Handig om dit naslagwerk grondig te bestuderen als u van plan bent om een 911 aan te schaffen. Te bestellen onder andere via <a href="http://www.bol.com">http://www.bol.com</a> of bijvoorbeeld <a href="http://www.amazon.com" target="_blank">http://www.amazon.com</a>
+                Met veel plezier sta ik op RSfest, een Porsche beurs in het Autotron op 6 & 7 september 2014. Ik nodig u allen van harte uit om mijn stand te bezoeken. Zie ook <a href="http://www.rsfest.nl" target="_blank">http://www.rsfest.nl.</a> Mocht u meer willen weten over de Porsche 911 dan raad ik het boek van de auteur Peter Morgan ‘Porsche 911 in detail’ aan. Daarin wordt de auto duidelijk per bouwjaar, in detail beschreven. Met productie -aanpassingen en –aantallen, chassis- en motornummers, lakkleuren, optielijsten en nog veel meer. Handig om dit naslagwerk grondig te bestuderen als u van plan bent om een 911 aan te schaffen. Te bestellen onder andere via <a href="http://www.bol.com">http://www.bol.com</a> of bijvoorbeeld <a href="http://www.amazon.com" target="_blank">http://www.amazon.com</a>
               </p>
               <p>
                 Bedankt voor het bezoeken van mijn webpagina.
